--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -203,8 +203,16 @@ jpn:
       # edit: "Modifier l’établissement\_: %{name}"
       # index: "Établissements"
       # new: "Ajout d’un nouvel etablissement"
-    backend/event_natures: #?
-    backend/events: #?
+    backend/event_natures:
+      # edit: "Modifier le type d'évènement\_: %{name}"
+      # index: "Types d'évènement"
+      # new: "Nouveau type d'évènement"
+      # show: "Type d'évènement\_: %{name}"
+    backend/events:
+      # edit: "Modifier l'évènement\_: %{name}"
+      # index: "Evènements"
+      # new: "Nouvel évènement"
+      # show: "Evènement\_: %{name}"
     backend/financial_years:
       # close: "Clôturer l’exercice %{code}"
       # compute_balances: "Calculer la balance de l’exercice"
@@ -245,6 +253,7 @@ jpn:
       # index: "Encaissements"
       # new: "Ajout d’un nouvel encaissement"
       # show: "Encaissement n°%{number} de %{entity}"
+    backend/intervention_casts: #?
     backend/interventions:
       # edit: "Modifier l’intervention %{procedure_name} N°%{id}"
       # index: "Interventions"
@@ -759,6 +768,7 @@ jpn:
     # are_you_sure_you_want_to_delete_delivery: "Êtes-vous sûr(e) de vouloir enlever cette livraison du transport ?"
     # are_you_sure_you_want_to_invoice: "Êtes-vous sûr(e) de vouloir facturer la vente ?"
     # are_you_sure_you_want_to_send_mails: "Êtes-vous sûr(e) de vouloir envoyer les mails ?"
+    # area_measure: "Superficie"
     # area_x: "%{name} (%{postcode})"
     # assessable_operations: "Opérations imposables (H.T)"
     # assets: "Immo. - Emprunts"
