--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -255,14 +255,16 @@ arb:
       edit: "تعديل نموذج المرفق : %{name}"
       index: "مرافق"
       new: "اضافة مرفق جديد"
-    backend/event_natures:  #?
-      edit: "تعديل نوع الحدث: %{name}" #?
-      index: "انواع الاحداث" #?
-      new: "اضافة نوع الحدث" #?
-    backend/events:  #?
-      edit: "تعديل الحدث" #?
-      index: "الاحداث" #?
-      new: "اضافة حدث" #?
+    backend/event_natures:
+      edit: "تعديل نوع الحدث: %{name}"
+      index: "انواع الاحداث"
+      new: "اضافة نوع الحدث"
+      # show: "Type d'évènement\_: %{name}"
+    backend/events:
+      edit: "تعديل الحدث"
+      index: "الاحداث"
+      new: "اضافة حدث"
+      # show: "Evènement\_: %{name}"
     backend/finances:  #?
       unvalidated_deposits: "التأكد من اقتطاعات البنك" #?
     backend/financial_years:
@@ -308,6 +310,7 @@ arb:
       new: "اضافة دفعة جديدة"
       show: "دفعة رقم%{number} من %{entity}"
     backend/interfacers: #?
+    backend/intervention_casts: #?
     backend/interventions:
       # edit: "Modifier l’intervention %{procedure_name} N°%{id}"
       # index: "Interventions"
@@ -950,6 +953,7 @@ arb:
     are_you_sure_you_want_to_invoice: "هل انت متأكد من رغبتك باعداد فاتورة البيع؟"
     are_you_sure_you_want_to_send_mails: "هل انت متأكد من رغبتك بارسال الرسالة"
     area_create: "اضافة عنوان بريدي" #?
+    # area_measure: "Superficie"
     area_x: "%{name} (%{postcode})"
     assessable_operations: "الاجراءات الضريبية (H.T)"
     # assets: "Immo. - Emprunts"
