--- a/config/locales/arb/procedures.yml
+++ b/config/locales/arb/procedures.yml
@@ -1,13 +1,16 @@
 arb:
   procedures:
     # animal_birth: "Naissance d’un animal"
+    # animal_treatment: "Traitement animal"
     # calving_one: "Vêlage unique"
     # calving_twin: "Vêlage jumeaux"
     # chemical_treatment: "Traitement chimique"
+    # grains_harvest: "Moisson"
     # mineral_fertilizing: "Fertilisation minérale"
     # organic_fertilizing: "Fertilisation organique"
+    # plant_grinding: "Broyage de végétaux"
     # plowing: "Labour"
-    # seed_harvest: "Moisson"
+    # raking: "Hersage"
     # sowing: "Semis"
     # superficial_plowing: "Hersage"
     # wheat_crop: "Culture de blé (standard)"
@@ -19,16 +22,20 @@ arb:
     # fertilizer: "Engrais"
     # fertilizer_to_spread: "Engrais à épandre"
     # grains: "Grains"
+    # grinder: "Broyeur"
     # harrow: "Herse"
     # land_parcel: "Parcelle"
     # manure: "Fumier"
     # manure_to_spread: "Fumier à épandre"
     # molecule: "Molécule"
+    # mother_animal: "Mère"
+    # plant: "Plantes, Culture"
     # plow: "Charrue"
     # seeder: "Semoir"
     # seeds: "Semences"
     # seeds_to_sow: "Semence à semer"
     # silo: "Silo"
+    # sower: "Semoir"
     # spreader: "Épandeur"
     # straw: "Paille"
     # tractor: "Tracteur"
