--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -19,7 +19,8 @@ eng:
         sir: "Sir"
         syndicate: "Syndicate"
     intervention:
-      procedure:
+      procedure: #?
+      procedures:
         # animal_birth: "Naissance d’un animal"
         # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
@@ -28,9 +29,39 @@ eng:
         # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
         # plowing: "Labour"
         # raking: "Hersage"
         # sowing: "Semis"
+        # superficial_plowing: "Hersage"
+        # wheat_crop: "Culture de blé (standard)"
+    intervention_cast:
+      variable:
+        # cropper: "Moissonneuse batteuse"
+        # cropper_driver: "Conducteur de moissonneuse batteuse"
+        # culture: "Culture"
+        # driver: "Conducteur"
+        # fertilizer: "Engrais"
+        # fertilizer_to_spread: "Engrais à épandre"
+        # grains: "Grains"
+        # grinder: "Broyeur"
+        # harrow: "Herse"
+        # land_parcel: "Parcelle"
+        # manure: "Fumier"
+        # manure_to_spread: "Fumier à épandre"
+        # molecule: "Molécule"
+        # mother_animal: "Mère"
+        # plant: "Plantes, Culture"
+        # plow: "Charrue"
+        # seeder: "Semoir"
+        # seeds: "Semences"
+        # seeds_to_sow: "Semence à semer"
+        # silo: "Silo"
+        # sower: "Semoir"
+        # spreader: "Épandeur"
+        # straw: "Paille"
+        # tractor: "Tracteur"
+        # trailer: "Remorque"
     procedure:  #?
       nomen: #?
         animal_birth: "Animal birth" #?
@@ -912,14 +943,20 @@ eng:
         vie: "Vietnamese"
     procedure_natures:
       items:
-        animal_cares: "Animal cares"
-        enrichment: "Enrichment"
-        feeding: "Feeding"
-        production: "Production"
-        reproduction: "Reproduction"
+        animal_cares: "Animal cares" #?
+        # animal_feeding: "Alimentation des animaux"
+        # animal_illness_treatment: "Traitement des maladies animales"
+        # animal_production: "Productions animales"
+        enrichment: "Enrichment" #?
+        feeding: "Feeding" #?
+        # oviparous_birth: "Reproduction (ovipare)"
+        production: "Production" #?
+        reproduction: "Reproduction" #?
+        # soil_enrichment: "Amendement"
         technical_guide: "Technical guide"
         tillage: "Tillage"
         treatment: "Treatment"
+        # viviparous_birth: "Reproduction (vivipare)"
       name: "Name"
     product_natures:
       attributes:
@@ -961,6 +998,7 @@ eng:
         all_in_one_equipment: "All in one equipment" #?
         # animal_building: "Bâtiment d'accueil pour les animaux"
         # animal_medicine: "Produit vétérinaire"
+        # baler: "Botteleuse"
         # barley_crop: "Culture d'orge"
         building: "Building"
         # building_division: "Pièce ou zone d'un bâtiment"
@@ -979,6 +1017,7 @@ eng:
         grain: "Grain"
         # grass: "Herbe"
         # hay: "Foin"
+        # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
         # insecticide: "Insecticide"
         land_parcel: "Land parcel"
@@ -990,15 +1029,19 @@ eng:
         milk: "Milk"
         # mineral_cleaner: "Nettoyant chimique"
         # mineral_fertilizer: "Engrais minéral"
+        # mower: "Faucheuse"
         # office_building: "Bureau"
         # organic_fertilizer: "Engrais organique"
+        # plow: "Charrue"
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
         # silage: "Ensilage"
         # small_equipment: "Petit matériel"
         # sorghum_crop: "Culture de sorgho"
+        # sower: "Semoir"
         # spelt_wheat_crop: "Culture d'épeautre"
-        # spread_renting: "Location de semoir"
+        # spread_renting: "Location d'épandeur"
+        # spreader: "Epandeur à engrais"
         straw: "Straw"
         # sunflower_crop: "Culture de tournesol"
         # technician: "Technicien"
