--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -804,9 +804,11 @@ jpn:
     # measure_value_unit: "Measure value unit"
     # measure_value_value: "Measure value value"
     # measured_at: "Mesuré à"
+    # meat_withdrawal_period: "Délai d'attente (viande)"
     # member: "Membre"
     # members: "Membres"
     # memberships: "Membres du groupe"
+    # milk_withdrawal_period: "Délai d'attente (lait)"
     # minimal_length: "Longueur minimale"
     # minimal_quantity: "Minimal quantity"
     # minimal_value: "Valeur minimale"
@@ -824,6 +826,7 @@ jpn:
     # name_2_to_1: "Nom «\_Personne 2 vers Personne 1\_»"
     # nature: "Type"
     # nature_name: "Nature name"
+    # net_volume: "Volume net"
     # net_weight: "Masse nette"
     # nic: "NIC (Numéro Interne de Classement)"
     # node: "Nœud"
@@ -902,6 +905,7 @@ jpn:
     # position: "Position"
     # postcode: "Code postal"
     # preferences: "Préférences"
+    # prescriptor: "Prescripteur"
     # pretax_amount: "Montant HT"
     # pretax_amount_generation: "Pretax amount generation"
     # price: "Prix"
@@ -914,6 +918,7 @@ jpn:
     # process: "Process"
     # producer: "Producteur"
     # product: "Produit"
+    # product_account: "Compte de produit"
     # product_events: "Product events"
     # product_localizations: "Product localizations"
     # product_moves: "Product moves"
@@ -1033,6 +1038,7 @@ jpn:
     # suspended: "Suspendu"
     # target: "Cible"
     # target_type: "Type de cible"
+    # tasks: "Tâches"
     # tax: "Taxe"
     # template: "Modèle"
     # theoric_quantity: "Quantité théorique"
@@ -1054,6 +1060,7 @@ jpn:
     # unconfirmed_email: "E-mail non confirmé"
     # undelivered_quantity: "Reste à livrer"
     # unit: "Unité"
+    # unit_name: "Unit name"
     # unit_price_amount: "Unit price amount"
     # unlocked_payments: "Paiement non verrouillés"
     # unpaid_sales: "Ventes impayées"
@@ -1068,12 +1075,15 @@ jpn:
     # user: "Utilisateur"
     # users: "Utilisateurs"
     # value: "Valeur"
+    # variable: "Variable"
+    # variable_indicators: "Indicateurs d'une variable"
     # variables: "Variables"
     # variant: "Variante"
     # variants: "Variantes"
     # variety: "Variété"
     # vat_number: "Numéro de TVA intra-communautaire"
     # vat_subjected: "Assujetti à la TVA"
+    # verb: "Verbe"
     # waiting_deliveries: "Livraisons en attente"
     # webpass: "Mot de passe web"
     # websites: "Sites web"
@@ -1216,11 +1226,53 @@ jpn:
         # plowing: "Labour"
         # raking: "Hersage"
         # sowing: "Semis"
+      procedures:
+        # animal_birth: "Naissance d’un animal"
+        # animal_treatment: "Traitement animal"
+        # calving_one: "Vêlage unique"
+        # calving_twin: "Vêlage jumeaux"
+        # chemical_treatment: "Traitement chimique"
+        # grains_harvest: "Moisson"
+        # mineral_fertilizing: "Fertilisation minérale"
+        # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
+        # plowing: "Labour"
+        # raking: "Hersage"
+        # sowing: "Semis"
+        # superficial_plowing: "Hersage"
+        # wheat_crop: "Culture de blé (standard)"
       state:
         # done: "Réalisée"
         # in_progress: "En cours"
         # squeezed: "Non réalisée"
         # undone: "Pas encore réalisée"
+    intervention_cast:
+      variable:
+        # cropper: "Moissonneuse batteuse"
+        # cropper_driver: "Conducteur de moissonneuse batteuse"
+        # culture: "Culture"
+        # driver: "Conducteur"
+        # fertilizer: "Engrais"
+        # fertilizer_to_spread: "Engrais à épandre"
+        # grains: "Grains"
+        # grinder: "Broyeur"
+        # harrow: "Herse"
+        # land_parcel: "Parcelle"
+        # manure: "Fumier"
+        # manure_to_spread: "Fumier à épandre"
+        # molecule: "Molécule"
+        # mother_animal: "Mère"
+        # plant: "Plantes, Culture"
+        # plow: "Charrue"
+        # seeder: "Semoir"
+        # seeds: "Semences"
+        # seeds_to_sow: "Semence à semer"
+        # silo: "Silo"
+        # sower: "Semoir"
+        # spreader: "Épandeur"
+        # straw: "Paille"
+        # tractor: "Tracteur"
+        # trailer: "Remorque"
     journal:
       nature:
         # bank: "Banque"
