--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -19,7 +19,8 @@ jpn:
         # sir: "Monsieur"
         # syndicate: "Syndicat"
     intervention:
-      procedure:
+      procedure: #?
+      procedures:
         # animal_birth: "Naissance d’un animal"
         # animal_treatment: "Traitement animal"
         # calving_one: "Vêlage unique"
@@ -28,9 +29,39 @@ jpn:
         # grains_harvest: "Moisson"
         # mineral_fertilizing: "Fertilisation minérale"
         # organic_fertilizing: "Fertilisation organique"
+        # plant_grinding: "Broyage de végétaux"
         # plowing: "Labour"
         # raking: "Hersage"
         # sowing: "Semis"
+        # superficial_plowing: "Hersage"
+        # wheat_crop: "Culture de blé (standard)"
+    intervention_cast:
+      variable:
+        # cropper: "Moissonneuse batteuse"
+        # cropper_driver: "Conducteur de moissonneuse batteuse"
+        # culture: "Culture"
+        # driver: "Conducteur"
+        # fertilizer: "Engrais"
+        # fertilizer_to_spread: "Engrais à épandre"
+        # grains: "Grains"
+        # grinder: "Broyeur"
+        # harrow: "Herse"
+        # land_parcel: "Parcelle"
+        # manure: "Fumier"
+        # manure_to_spread: "Fumier à épandre"
+        # molecule: "Molécule"
+        # mother_animal: "Mère"
+        # plant: "Plantes, Culture"
+        # plow: "Charrue"
+        # seeder: "Semoir"
+        # seeds: "Semences"
+        # seeds_to_sow: "Semence à semer"
+        # silo: "Silo"
+        # sower: "Semoir"
+        # spreader: "Épandeur"
+        # straw: "Paille"
+        # tractor: "Tracteur"
+        # trailer: "Remorque"
     procedure: #?
     product:
       unit:
@@ -892,14 +923,15 @@ jpn:
         vie: "ベトナム語（ヴェトナム語）"
     procedure_natures:
       items:
-        # animal_cares: "Soin animaliers"
-        # enrichment: "Amendement"
-        # feeding: "Alimentation"
-        # production: "Production"
-        # reproduction: "Reproduction"
+        # animal_feeding: "Alimentation des animaux"
+        # animal_illness_treatment: "Traitement des maladies animales"
+        # animal_production: "Productions animales"
+        # oviparous_birth: "Reproduction (ovipare)"
+        # soil_enrichment: "Amendement"
         # technical_guide: "Itinéraire technique"
         # tillage: "Travail du sol"
         # treatment: "Traitement"
+        # viviparous_birth: "Reproduction (vivipare)"
       # name: "Type de procédures"
     product_natures:
       attributes:
@@ -939,6 +971,7 @@ jpn:
       items:
         # animal_building: "Bâtiment d'accueil pour les animaux"
         # animal_medicine: "Produit vétérinaire"
+        # baler: "Botteleuse"
         # barley_crop: "Culture d'orge"
         # building: "Bâtiment"
         # building_division: "Pièce ou zone d'un bâtiment"
@@ -957,6 +990,7 @@ jpn:
         # grain: "Graine"
         # grass: "Herbe"
         # hay: "Foin"
+        # hay_rake: "Andaineur"
         # herbicide: "Herbicide"
         # insecticide: "Insecticide"
         # land_parcel: "Parcelle"
@@ -968,15 +1002,19 @@ jpn:
         # milk: "Lait"
         # mineral_cleaner: "Nettoyant chimique"
         # mineral_fertilizer: "Engrais minéral"
+        # mower: "Faucheuse"
         # office_building: "Bureau"
         # organic_fertilizer: "Engrais organique"
+        # plow: "Charrue"
         # screed_building: "Construction béton (silo, chape, terrasse)"
         # seed: "Semence"
         # silage: "Ensilage"
         # small_equipment: "Petit matériel"
         # sorghum_crop: "Culture de sorgho"
+        # sower: "Semoir"
         # spelt_wheat_crop: "Culture d'épeautre"
-        # spread_renting: "Location de semoir"
+        # spread_renting: "Location d'épandeur"
+        # spreader: "Epandeur à engrais"
         # straw: "Paille"
         # sunflower_crop: "Culture de tournesol"
         # technician: "Technicien"
