--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -596,7 +596,6 @@ jpn:
     # backend/custom_field_choices: "Choix de champs personnalisés"
     # backend/custom_fields: "Champs personnalisés"
     # backend/dashboards: "Tableaux de bord"
-    # backend/deposit_items: "Lignes de remise en banque"
     # backend/deposits: "Remises en banque"
     # backend/districts: "Zones administratives"
     # backend/document_templates: "Modèles de document"
@@ -1323,6 +1322,7 @@ jpn:
     # record_has_not_been_removed: "L’enregistrement n’a pu être supprimé."
     # reflect: "Refléter"
     # refresh: "Rafraîchir"
+    # related_people: "En lien avec"
     # relationship: "Gestion des relations clients/fournisseurs"
     # remove_diagnostic: "Supprimer un diagnostic"
     # remove_indicator_datum: "Supprimer une mesure pour un indicateur"
@@ -1558,7 +1558,10 @@ jpn:
       # one: "%{count} lien"
       # other: "%{count} liens"
       # zero: "0 lien"
-    x_events: #?
+    x_events:
+      # one: "%{count} évènement"
+      # other: "%{count} évènements"
+      # zero: "0 évènement"
     x_events_of_nature_y:
       # one: " %{count} évènement de type %{nature} d’une durée de %{duration} minutes"
       # other: " %{count} évènements de type %{nature} pour une durée totale de %{duration} minutes"
@@ -1582,10 +1585,7 @@ jpn:
       # one: "%{count} responsabilité"
       # other: "%{count} responsabilités "
       # zero: "0 responsabilité"
-    x_meetings:
-      # one: "%{count} évènement"
-      # other: "%{count} évènements"
-      # zero: "0 évènement"
+    x_meetings: #?
     x_months:
       # one: "%{count} mois"
       # other: "%{count} mois"
