--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -721,7 +721,10 @@ jpn:
     # indicators: "Indicators"
     # indirect_links: "Liens indirects"
     # individual: "Individual"
+    # initial_arrival_cause: "Initial arrival cause"
+    # initial_container: "Initial container"
     # initial_number: "Numéro initial"
+    # initial_owner: "Initial owner"
     # integer_value: "Valeur entière"
     # intervention: "Intervention"
     # intervention_casts: "Intervention casts"
@@ -767,6 +770,7 @@ jpn:
     # local_count: "Population"
     # local_credit: "Crédit"
     # local_debit: "Débit"
+    # localizations: "Localizations"
     lock_version: "修正の番号"
     # locked: "Verrouillé"
     # locked_at: "Verrouillé à"
@@ -863,6 +867,7 @@ jpn:
     # output_conveyors: "Convoyeur sortant"
     # owner: "Propriétaire"
     # owner_type: "Nature du propriétaire"
+    # ownerships: "Ownerships"
     # paid: "Réglée"
     # paid_amount: "Montant payé"
     # paid_on: "Réglé le"
