--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -110,6 +110,7 @@ arb:
     backend/cells/demo_bar_cells: #?
     backend/cells/demo_map_cells: #?
     backend/cells/demo_pie_cells: #?
+    backend/cells/elapsed_interventions_times_by_activities_cells: #?
     backend/cells/elevage_rss_cells: #?
     backend/cells/expense_chart_cells: #?
     backend/cells/last_entities_cells: #?
@@ -1137,6 +1138,7 @@ arb:
     # duration_in_hours_and_minutes: "%{hours}h %{minutes}min"
     edit: "تعديل"
     ekylibre: "www.ekylibre.org"
+    # elapsed_interventions_times_by_activities: "Temps passé par activité"
     # email: "Email:"
     employee_name: "الموظف"
     end: "لغاية"
