--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -103,6 +103,7 @@ eng:
     backend/cells/demo_bar_cells: #?
     backend/cells/demo_map_cells: #?
     backend/cells/demo_pie_cells: #?
+    backend/cells/elapsed_interventions_times_by_activities_cells: #?
     backend/cells/expense_chart_cells: #?
     backend/cells/last_entities_cells: #?
     backend/cells/last_events_cells: #?
@@ -992,6 +993,7 @@ eng:
     duration_in_hours_and_minutes: "%{hours}h %{minutes}min"
     edit: "Edit"
     ekylibre: "www.ekylibre.org"
+    # elapsed_interventions_times_by_activities: "Temps passé par activité"
     email: "Email:"
     employee_name: "Employee"
     end: "to"
