--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -2183,7 +2183,7 @@ arb:
     # backend/logs: "{observed_at}"
     # backend/matters: "{name} - {work_number}"
     # backend/observations: "{content}"
-    # backend/operations: "{nature} ({created_at})"
+    # backend/operations: "{position} ({started_at})"
     # backend/plants: "{name} - {work_number}"
     # backend/product_indicators: "{id}"
     # backend/product_memberships: "{started_at}"
