Fixes bad url construction in association column

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1832,8 +1832,14 @@ eng:
     cash_transfer:
       bookkeep: "[%{resource} %{number}] From %{emitter} to %{receiver} %{description}"
     catalog:
+      cost:
+        # name: "Catalogue de coût d'utilisation"
       default:
         # name: "Par défaut"
+      purchase:
+        # name: "Catalogue d'achat"
+      sale:
+        # name: "Catalogue de vente"
     company:  #?
       cant_find_document_template: "Can not find document template" #?
       default: #?
