--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1439,8 +1439,14 @@ jpn:
     cash_transfer:
       # bookkeep: "[%{resource} %{number}] De %{emission} à %{reception} %{description}"
     catalog:
+      cost:
+        # name: "Catalogue de coût d'utilisation"
       default:
         # name: "Par défaut"
+      purchase:
+        # name: "Catalogue d'achat"
+      sale:
+        # name: "Catalogue de vente"
     company: #?
     delay: #?
     deposit:
