--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -1058,6 +1058,7 @@ fra:
     document: "Document joint"
     document_natures: "Types de documents"
     document_templates: "Modèles de documents"
+    doer_evaluated_cost: "Coût main d'oeuvre"
     dont_use_journal: "— Ne pas utiliser de journal —"
     down: "Descendre"
     down_to_level: "Détailler jusqu’au niveau"
@@ -1082,6 +1083,7 @@ fra:
     entity_to_update: "Fiche à mettre à jour avec les éléments du doublon"
     entries: "Écritures"
     entries_to_point: "Écritures à pointer"
+    equipment_evaluated_cost: "Coût équipements"
     error_no_file: "Aucune aide n’est disponible pour cette partie de l’application (%{article}). L’aide n’a pas encore été rédigée. Vous pouvez consulter le site en ligne pour plus d’informations."
     error_sale_already_paid: "La vente a déjà été payée en totalité"
     errors_explanation: "Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l’importation"
@@ -1157,6 +1159,7 @@ fra:
     indicators: "Indicateurs"
     info: "Information\_: %{value}"
     infos: "Information générales"
+    input_evaluated_cost: "Coût intrants"
     insert_actual_password: "Saisissez votre mot de passe actuel"
     insert_password: "Saisissez votre nouveau mot de passe"
     international_normal_vat_collected: "Taux normal à 8,5%"
