--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1071,6 +1071,7 @@ eng:
     mode: "Mode"
     mother: "Mother"
     move: "Move"
+    # move_type: "Move type"
     moved_at: "Moved at"
     moved_on: "Moved on"
     moves: "Moves"
@@ -1102,6 +1103,7 @@ eng:
     operation_lines: "Operation lines" #?
     operation_nature: "Operation type"
     operation_natures: "Operation types"
+    # operation_task: "Operation task"
     # operation_tasks: "Operation tasks"
     operation_uses: "Tool uses"
     operations: "Operations"
