--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -917,6 +917,7 @@ jpn:
     # document: "Document joint"
     # document_natures: "Types de documents"
     # document_templates: "Modèles de documents"
+    # doer_evaluated_cost: "Coût main d'oeuvre"
     # dont_use_journal: "— Ne pas utiliser de journal —"
     # down: "Descendre"
     # down_to_level: "Détailler jusqu’au niveau"
@@ -941,6 +942,7 @@ jpn:
     # entity_to_update: "Fiche à mettre à jour avec les éléments du doublon"
     # entries: "Écritures"
     # entries_to_point: "Écritures à pointer"
+    # equipment_evaluated_cost: "Coût équipements"
     error_no_file: "ページ(%{article})はありません。"
     # error_sale_already_paid: "La vente a déjà été payée en totalité"
     # errors_explanation: "Il y a des erreurs dans le fichier. Si vous ne corrigez pas les problèmes, les lignes erronées ne seront pas prises en compte lors de l’importation"
@@ -1016,6 +1018,7 @@ jpn:
     # indicators: "Indicateurs"
     # info: "Information\_: %{value}"
     # infos: "Information générales"
+    # input_evaluated_cost: "Coût intrants"
     # insert_actual_password: "Saisissez votre mot de passe actuel"
     # insert_password: "Saisissez votre nouveau mot de passe"
     # international_normal_vat_collected: "Taux normal à 8,5%"
