--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1690,6 +1690,7 @@ arb:
       # all: "Toutes"
       # current: "En cours"
       # unpaid: "Impayées"
+    # same_variant_as_x: "Même variante de produit que %{x}"
     save: "حفظ"
     # save_and_go_to_x: "Enregistrer et passer à «\_%{x}\_»"
     save_in_draft: "حفظ في المسودات"
@@ -1813,6 +1814,7 @@ arb:
     unit_price_amount_with_taxes: "PU TTC"
     units_load: "تحميل الوحدات الاساسية المفقودة"
     unknown_condition: "غير معروف نوع الشرط"
+    # unknown_variant: "Variante de produit inconnue"
     unlock: "فتح القفل"
     unpaid: "غير مسدد"
     unpaid_amount: "القيمة المتبقية"
@@ -2191,9 +2193,10 @@ arb:
     # backend/product_indicators: "{id}"
     # backend/product_memberships: "{started_at}"
     # backend/product_nature_prices: "{amount} {currency} / {pretax_amount} {currency}"
+    # backend/product_nature_variants: "{name} ({unit_name})"
     # backend/product_natures: "{name}"
     # backend/product_transfers: "{id}"
-    # backend/products: "{work_number} {name}"
+    # backend/products: "{work_number} {name} ({!population} {!unit_name})"
     # backend/units: "{label} ({name})"
     # backend/users: "{first_name} {last_name}"
     logs: #?
