--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1512,6 +1512,7 @@ spa:
       # all: "Toutes"
       # current: "En cours"
       # unpaid: "Impayées"
+    # same_variant_as_x: "Même variante de produit que %{x}"
     # save: "Enregistrer"
     # save_and_go_to_x: "Enregistrer et passer à «\_%{x}\_»"
     save_in_draft: "Salvar en la niebla"
@@ -1625,6 +1626,7 @@ spa:
     unit_price_amount_with_taxes: "PU TTC"
     units_load: "Cargar las unidades de base que falten"
     # unknown_condition: "Type de condition inconnue"
+    # unknown_variant: "Variante de produit inconnue"
     # unlock: "Déverrouiller"
     # unpaid: "Impayées"
     # unpaid_amount: "Montant restant à payer"
@@ -1957,9 +1959,10 @@ spa:
     # backend/product_indicators: "{id}"
     # backend/product_memberships: "{started_at}"
     # backend/product_nature_prices: "{amount} {currency} / {pretax_amount} {currency}"
+    # backend/product_nature_variants: "{name} ({unit_name})"
     # backend/product_natures: "{name}"
     # backend/product_transfers: "{id}"
-    # backend/products: "{work_number} {name}"
+    # backend/products: "{work_number} {name} ({!population} {!unit_name})"
     # backend/units: "{label} ({name})"
     # backend/users: "{first_name} {last_name}"
     logs: #?
