Makes translations working for tasks

--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -1,4 +1,29 @@
 fra:
+  procedo:
+    actions:
+      move_to: "%{product} va à l'emplacement de %{localizable}"
+      move_in: "%{product} va dans %{localizable}"
+      move_in_default_storage: "%{product} va à son emplacement par défaut"
+      move_in_given_default_storage: "%{product} va l'emplacement par défaut de  %{localizable}"
+      production: "%{product} produit %{producible}"
+      consumption: "%{product} consomme %{consumable}"
+      death: "%{product} meurt"
+      attachment: "%{carrier} s'attache à %{carried}"
+      detachment: "%{carrier} se détache de %{carried}"
+      group_inclusion: "%{member} entre dans le groupe %{group}"
+      group_exclusion: "%{member} sort du groupe %{group}"
+      ownership_loss: "%{product} perd son propriétaire"
+      owner_change: "%{product} change de propriétaire pout %{owner}"
+      merging: "%{product} fusionne avec %{merged}"
+      division: "%{product} se sépare de %{parted}"
+      browsing: "%{browser} parcourt %{browsed}"
+      simple_measure: "%{indicator} est mesuré"
+      measure: "%{reporter} mesure %{indicator}"
+      assisted_measure: "%{reporter} mesure %{indicator} avec %{tool}"
+      outgoing_delivery: "%{product} est expédié"
+      identified_outgoing_delivery: "%{product} est expédié à %{client}"
+      incoming_delivery: "%{product} est réceptionné"
+      identified_incoming_delivery: "%{product} est réceptionné du %{supplier}"
   procedures:
     animal_birth: "Naissance d’un animal"
     animal_treatment: "Traitement animal"
