--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1018,7 +1018,7 @@ arb:
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
-        # trail: "Remorque"
+        # trailer: "Remorque"
         # wheat_crop: "Culture de blé"
         # wheat_grain: "Grain de blé"
       # name: "Type de produits"
