--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1007,7 +1007,7 @@ fra:
         technician: "Technicien"
         temporary_meadow_crop: "Culture de prairie temporaire"
         tractor: "Tracteur"
-        trail: "Remorque"
+        trailer: "Remorque"
         wheat_crop: "Culture de blé"
         wheat_grain: "Grain de blé"
       name: "Type de produits"
