--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -1020,7 +1020,7 @@ jpn:
         # technician: "Technicien"
         # temporary_meadow_crop: "Culture de prairie temporaire"
         # tractor: "Tracteur"
-        # trail: "Remorque"
+        # trailer: "Remorque"
         # wheat_crop: "Culture de blé"
         # wheat_grain: "Grain de blé"
       # name: "Type de produits"
