--- a/config/locales/jpn/procedures.yml
+++ b/config/locales/jpn/procedures.yml
@@ -1,4 +1,29 @@
 jpn:
+  procedo:
+    actions:
+      # assisted_measure: "%{reporter} mesure %{indicator} avec %{tool}"
+      # attachment: "%{carrier} s'attache à %{carried}"
+      # browsing: "%{browser} parcourt %{browsed}"
+      # consumption: "%{product} consomme %{consumable}"
+      # death: "%{product} meurt"
+      # detachment: "%{carrier} se détache de %{carried}"
+      # division: "%{product} se sépare de %{parted}"
+      # group_exclusion: "%{member} sort du groupe %{group}"
+      # group_inclusion: "%{member} entre dans le groupe %{group}"
+      # identified_incoming_delivery: "%{product} est réceptionné du %{supplier}"
+      # identified_outgoing_delivery: "%{product} est expédié à %{client}"
+      # incoming_delivery: "%{product} est réceptionné"
+      # measure: "%{reporter} mesure %{indicator}"
+      # merging: "%{product} fusionne avec %{merged}"
+      # move_in: "%{product} va dans %{localizable}"
+      # move_in_default_storage: "%{product} va à son emplacement par défaut"
+      # move_in_given_default_storage: "%{product} va l'emplacement par défaut de  %{localizable}"
+      # move_to: "%{product} va à l'emplacement de %{localizable}"
+      # outgoing_delivery: "%{product} est expédié"
+      # owner_change: "%{product} change de propriétaire pout %{owner}"
+      # ownership_loss: "%{product} perd son propriétaire"
+      # production: "%{product} produit %{producible}"
+      # simple_measure: "%{indicator} est mesuré"
   procedures:
     # animal_birth: "Naissance d’un animal"
     # animal_treatment: "Traitement animal"
