--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1341,17 +1341,45 @@ fra:
         celsius: "celsius"
         square_meter: "mètre carré"
         unity: "unité"
-    product_indicator:
+    product_indicator_datum:
       nature:
         boolean: "Case à cocher"
         choice: "Liste de choix"
         decimal: "Chiffre (décimal)"
         measure: "Mesure"
         string: "Texte"
-      usage:
-        environment: "Environnement"
-        life: "Biologique"
-        production: "Production"
+      indicator:
+        animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
+        animal_life_state: "Phase du bioprocessus de vie d’un animal"
+        cells_concentration: "Dénombrement des cellules somatiques"
+        clostridial_spores_concentration: "Concentration en spores butyriques"
+        fat_matters_concentration: "Teneur en matières grasses"
+        freezing_point_temperature: "Point de solidification"
+        ground_appearance: "Aspect du sol"
+        immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
+        in_production: "En production"
+        inel_index: "Index génétique INEL"
+        inhibitors_presence: "Présence de résidus d’inhibiteurs"
+        isu_index: "Index génétique ISU"
+        lipolysis: "Lipolyse"
+        mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
+        mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
+        milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+        net_surface_area: "Surface net"
+        net_volume: "Volume net"
+        net_weight: "Poids net"
+        plant_life_state: "Phase du bioprocessus de vie d’un végétal"
+        plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
+        population: "Population"
+        protein_matters_concentration: "Teneur en matières protéïques"
+        shape: "Forme"
+        sowable: "Semable"
+        temperature: "Température"
+        total_bacteria_concentration: "Dénombrement des germes totaux"
+        tp_index: "Index génétique Taux protéïque"
+        urea_concentration: "Teneur moyenne en urée"
+        usage_duration: "Durée d'utilisation"
     product_localization:
       arrival_cause:
         birth: "Naissance"
